# search-comment-file

./: README.md
Desktop/MY_PROJECTS/: webpage1.html  webpage2.css  webpage2.html
Desktop/computer networks/: dvr.c  one.c
Desktop/fullstack/arrays(c)/: array  array.h  arrays1  arrays1.c  arrays10.c  arrays11.c  arrays12.c  arrays13.c  arrays14.c  arrays15.c  arrays16.c  arrays17.c  arrays18.c  arrays2.c  arrays3.c  arrays4.c  arrays5.c  arrays6.c  arrays7.c  arrays8.c  arrays9.c  practice.c
Desktop/fullstack/basic(c)/: basic1.c  basic12.c  basic13.c  basic2.c  basic3.c  basic4.c  basic5.c  basic6.c  basic7.c  basic8.c
Desktop/fullstack/ds(c)/: ds1.c  ds10.c  ds11.c  ds12.c  ds13.c  ds14.c  ds15.c  ds16.c  ds2.c  ds3.c  ds4.c  ds5.c  ds6.c  ds7.c  ds8.c  ds9.c  practice.c
Desktop/fullstack/files(c)/: files1.c  files2.c  files3.c  files4.c  files5.c  files6.c  files7.c  practice.c
Desktop/fullstack/functions(c)/: fucntions8.c  functions1  functions1.c  functions2.c  functions3.c  functions4  functions4.c  functions5.c  functions6.c  functions7.c  functions9.c  practice.c
Desktop/fullstack/html/: exe1.html  exe4.html  html1.html  html10.html  html11.html  html12.html  html13.html  html15.html  html16.html  html17.html  html18.html  html2.html  html3.html  html4.html  html5.html  html6.html  html7.html  html8.html  html9.html  practice.html  styles.css
Desktop/search-comment/: README.md  pyproject.toml
Desktop/search-comment/search_comment/: __init__.py  main.py
Desktop/search-comment/search_comment_file.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+489 files in other folders)
