[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "search-comment-file"
version = "1.0.2"
description = "Search source code files using comments"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Bhupathi Abhi Chethan" }
]

[project.scripts]
search-comment = "search_comment.main:search_comments"


[tool.setuptools.packages.find]
include = ["search_comment*"]